[plan] Add built-in chat model action and tool call action in java.
add license.